@@ -89,4 +89,5 @@
 - Agent now sends its own logs to elasticsearch {pull}19811[19811]
 - Add --insecure option to enroll command {pull}19900[19900]
 - Will retry to enroll if the server return a 429. {pull}19918[19811]
+- Allow to specify what artifacts to embed at build times {pull}20019[20019]
 - Add --staging option to enroll command {pull}20026[20026]
